# auto_sms

./: .gitignore  AAB_BUILD_SUCCESS.md  ANDROID_15_COMPATIBILITY.md  App.tsx  BUILD_AAB_INSTRUCTIONS.md  LOGGING_IMPLEMENTATION_SUMMARY.md  OPTIMIZE.md  PLAY_STORE_CHECKLIST.md  RCS_FIXES_SUMMARY.md  README.md  RELEASE_OPTIMIZATION_REPORT.md  SMS_ANDROID15_README.md  SMS_RCS_ISSUE_FIXES.md  SMS_RCS_LOGGING.md  TreatmentFirst.docx  TreatmentSecond.docx  TreatmentThird.docx  app.json  autosendllm.md  autosendsms.md  autosendsmsai.md  autosendsmspermissionissue.md  autosmsrcs.md  autosmsreplynew.md  autosmsrequirements.md  build_aab.sh  create_fallback_icons.sh  create_keystore.sh  faq.txt  icon_update_summary.md  live_monitor.sh  monitor_logs.sh  package-lock.json  package.json  pdf_extraction_logs.txt  pricing_info.txt  testLog.js  test_app.sh  test_rcs_fixes.md  test_sms_log.sh  (+2 more)
android/: build.gradle  gradle.properties.example  optimize-build.sh  rcs_logs.txt  settings.gradle
android/app/: build.gradle  proguard-rules.pro  release.bak
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/documents/: pricing.txt
android/app/src/main/cpp/: CMakeLists.txt  llama_wrapper.cpp  llama_wrapper.h
android/app/src/main/java/com/auto_sms/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/auto_sms/callsms/: AutoReplyModule.kt  BootReceiver.kt  CallLogCheckService.kt  CallReceiver.kt  CallSmsModule.bak  CallSmsModule.kt  CallSmsModule.kt.bak2  CallSmsPackage.kt  CallSmsService.kt  HeadlessSmsSendService.kt  LogTestModule.kt  LogTestModule.kt.new  LoggingPackage.kt  MmsReceiver.kt  PermissionsManager.kt  RCS_SMS_ISSUE_FIXES.md  RcsAutoReplyManager.kt  RcsAutoReplyManager.kt.bak2  RcsMessageHandler.kt  RcsNotificationListener.kt  RcsPackage.kt  RcsPermissionHelper.kt  RcsPermissionsModule.kt  RcsTestHelper.kt  SmsDeliveredReceiver.kt  SmsProcessor.kt  SmsReceiver.kt  SmsReceiver.kt.bak  SmsSender.kt
android/app/src/main/java/com/auto_sms/docextractor/: DocExtractorHelper.kt
android/app/src/main/java/com/auto_sms/docparser/: DocParserModule.kt  DocParserPackage.kt
android/app/src/main/java/com/auto_sms/llm/: DocumentExtractor.kt  LlamaCppWrapper.kt  LocalLLMModule.kt  LocalLLMPackage.kt  MLCLLMModule.kt  ModelDownloader.kt  Phi3MiniModule.kt  Phi3MiniPackage.kt
android/app/src/main/java/com/auto_sms/permissions/: PermissionsManager.kt  PermissionsPackage.kt
android/app/src/main/res/drawable/: notification_icon.xml  rn_edit_text_material.xml
android/app/src/main/res/raw/: mlc_llm_config.json
android/app/src/main/res/values/: strings.xml
android/scripts/: log_filter.sh  monitor_rcs_logs.sh  reset_rcs_state.sh
app/src/main/java/com/auto_sms/permissions/: PermissionsManager.kt  PermissionsPackage.kt
src/components/: AutoReplyToggle.tsx  DefaultSmsHandlerListener.tsx  LLMAutoReplyToggle.tsx  LLMTester.tsx  LogTester.js  Phi3MiniTester.tsx  SmsBehaviorNotice.tsx  index.ts
src/navigation/: AppNavigator.tsx
src/screens/: AIChatLogScreen.tsx  AIDocumentScreen.tsx  AutoReplySettingsScreen.tsx  AutoSmsStatusScreen.tsx  HomeScreen.tsx  LLMDebugScreen.tsx  LLMTestScreen.tsx  LocalLLMSetupScreen.tsx  PermissionsStatusScreen.tsx  TestAutoReplyScreen.tsx  autosms-phi-3-mini.md  index.ts  phi3-implementation-summary.md
src/services/: AIService.ts  AutoReplyService.ts  CallSmsService.ts  DocParserService.ts  LocalLLMService.ts  PermissionsService.ts  SmsService.ts  index.ts
src/tests/: TestAutoReply.ts
src/utils/: LogTester.js  PermissionsManager.ts
